--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -5,9 +5,9 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-{{project-name}}-app = { path = "../app" }
+{{project-name}}_app = { path = "../app" }
 
 [build-dependencies]
 gwasm-builder.workspace = true
 sails-idl-gen.workspace = true
-{{project-name}}-app = { path = "../app" }
+{{project-name}}_app = { path = "../app" }
